更新下样式，让代码自己滚动起来

--- a/css/default.css
+++ b/css/default.css
@@ -7,3 +7,10 @@
 .token.function {
     color: black;
 }
+* {
+    box-sizing: border-box;
+}
+#code {
+    height: 100vh;
+    overflow: hidden;
+}
